--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -191,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T19:33:45.027229Z",
-     "start_time": "2019-12-17T19:33:43.667229Z"
+     "end_time": "2019-12-17T20:02:04.811229Z",
+     "start_time": "2019-12-17T20:02:03.365229Z"
     }
    },
    "outputs": [],
@@ -255,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 239,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T19:44:56.400229Z",
-     "start_time": "2019-12-17T19:44:54.999229Z"
+     "end_time": "2019-12-17T20:27:55.964229Z",
+     "start_time": "2019-12-17T20:27:54.455229Z"
     }
    },
    "outputs": [
@@ -267,32 +267,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 2019-12-17 14:44:56,353 - INFO - SELECT CAREPROCESSES.MechVent FROM CPR JOIN HOSPITALADMIT ON CPR.PudID = HOSPITALADMIT.PudID JOIN CAREPROCESSES ON HOSPITALADMIT.PudID = CAREPROCESSES.PudID \n"
+      " 2019-12-17 15:27:55,869 - INFO - SELECT HOSPITALADMIT.AdmitThroughED, HOSPITALADMIT.Sex, CAREPROCESSES.MechVent FROM HOSPITALADMIT JOIN CAREPROCESSES ON HOSPITALADMIT.PudID = CAREPROCESSES.PudID \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.04200005531311035\n"
+      "0.09100008010864258\n"
      ]
     }
    ],
    "source": [
-    "path = ['CPR', 'HOSPITALADMIT', 'CAREPROCESSES']\n",
+    "path = ['HOSPITALADMIT', 'CAREPROCESSES']\n",
     "start = time.time()\n",
-    "df = z.get_df_from_path(path, table_columns_of_interest=['CAREPROCESSES.MechVent'])\n",
+    "df = z.get_df_from_path(path, table_columns_of_interest=['HOSPITALADMIT.AdmitThroughED', 'HOSPITALADMIT.Sex', 'CAREPROCESSES.MechVent'])\n",
     "end = time.time()\n",
     "print(end-start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 240,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T19:44:57.952229Z",
-     "start_time": "2019-12-17T19:44:56.405229Z"
+     "end_time": "2019-12-17T20:27:57.648229Z",
+     "start_time": "2019-12-17T20:27:55.968229Z"
     }
    },
    "outputs": [
@@ -317,83 +317,214 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>AdmitThroughED</th>\n",
+       "      <th>Sex</th>\n",
        "      <th>MechVent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>188</td>\n",
+       "      <td>10073</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10074</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10075</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>189</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>10076</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>190</td>\n",
+       "      <td>10077</td>\n",
        "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>191</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>192</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>193 rows × 1 columns</p>\n",
+       "<p>10078 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    MechVent\n",
-       "0        Yes\n",
-       "1        Yes\n",
-       "2        Yes\n",
-       "3        Yes\n",
-       "4        Yes\n",
-       "..       ...\n",
-       "188      Yes\n",
-       "189      Yes\n",
-       "190      Yes\n",
-       "191      Yes\n",
-       "192      Yes\n",
+       "      AdmitThroughED     Sex MechVent\n",
+       "0                 No    Male       No\n",
+       "1                Yes  Female       No\n",
+       "2                Yes    Male       No\n",
+       "3                Yes    Male       No\n",
+       "4                Yes  Female      Yes\n",
+       "...              ...     ...      ...\n",
+       "10073             No    Male       No\n",
+       "10074             No  Female       No\n",
+       "10075             No    Male      Yes\n",
+       "10076             No    Male       No\n",
+       "10077            Yes    Male       No\n",
        "\n",
-       "[193 rows x 1 columns]"
+       "[10078 rows x 3 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T20:31:23.985229Z",
+     "start_time": "2019-12-17T20:31:22.496229Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 2019-12-17 15:31:23,948 - DEBUG - Aggregate by ['AdmitThroughED', 'Sex']\n",
+      " 2019-12-17 15:31:23,950 - DEBUG - Aggregate for MechVent\n"
+     ]
+    }
+   ],
+   "source": [
+    "filters = {\n",
+    "    'AdmitThroughED': {'type': 'list', 'filter': ['Yes', 'No']},\n",
+    "    'Sex': {'type': 'list', 'filter': ['Male', 'Female']}\n",
+    "}\n",
+    "new_df = z.aggregate_df(df, groupby_columns=['AdmitThroughED', 'Sex'], filters=filters, aggregate_column='MechVent', aggregate_fxn='Count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T20:31:37.452229Z",
+     "start_time": "2019-12-17T20:31:35.984229Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['MechVent'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-253-ddff5d1bed55>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnew_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'MechVent'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   4100\u001b[0m             \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4101\u001b[0m             \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4102\u001b[1;33m             \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4103\u001b[0m         )\n\u001b[0;32m   4104\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3912\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3913\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3914\u001b[1;33m                 \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3915\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3916\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   3944\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3945\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3946\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3947\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3948\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   5338\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5339\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5340\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{} not found in axis\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5341\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5342\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['MechVent'] not found in axis\""
+     ]
+    }
+   ],
+   "source": [
+    "new_df.drop(columns='MechVent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T20:32:09.880229Z",
+     "start_time": "2019-12-17T20:32:08.511229Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([3, 2, 1, 0], dtype='int64')"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-17T20:32:18.753229Z",
+     "start_time": "2019-12-17T20:32:17.327229Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['No', 'Yes', 'groupby_labels'], dtype='object', name='MechVent')"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.columns"
    ]
   },
   {
