--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-16T19:37:37.404229Z",
-     "start_time": "2019-12-16T19:37:35.821229Z"
+     "end_time": "2019-12-19T15:25:02.347489Z",
+     "start_time": "2019-12-19T15:24:42.158489Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      " 2019-12-19 10:25:02,321 - DEBUG - backend module://ipykernel.pylab.backend_inline version unknown\n"
      ]
     }
    ],
@@ -135,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T18:53:39.916229Z",
-     "start_time": "2019-12-17T18:53:38.534229Z"
+     "end_time": "2019-12-19T15:50:26.674489Z",
+     "start_time": "2019-12-19T15:50:24.788489Z"
     },
     "scrolled": true
    },
@@ -150,24 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T18:53:41.573229Z",
-     "start_time": "2019-12-17T18:53:39.919229Z"
+     "end_time": "2019-12-19T15:50:28.564489Z",
+     "start_time": "2019-12-19T15:50:26.823489Z"
     }
    },
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "Linking has been finalized. Delete the .metadata file if you want to re-do it",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-158-0f4dcd0d4808>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_global_fk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'PudID'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\Programming\\cohort-visualization\\db_structure_v2.py\u001b[0m in \u001b[0;36madd_global_fk\u001b[1;34m(self, column)\u001b[0m\n\u001b[0;32m    140\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_global_fk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    141\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfinalized\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 142\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Linking has been finalized. Delete the .metadata file if you want to re-do it'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    143\u001b[0m         \u001b[0mtables_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mtable\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtable_names\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: Linking has been finalized. Delete the .metadata file if you want to re-do it"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 2019-12-19 10:50:28,554 - DEBUG - ['CARDIACPROCEDURES', 'CARDIACSURGERY', 'CAREPROCESSES', 'CATASTROPHICEVENTS', 'CPR', 'DEATH', 'HOSPITALADMIT', 'HOSPITALADMIT_CE', 'HOSPITALDISCHARGE', 'LIMITOFCARE', 'PHYSIOSTATUS', 'PICUADMIT', 'PICUADMIT_ADMITSECONDDX', 'PICUADMIT_AHD', 'PICUADMIT_CHD', 'PICUADMIT_CHRONICDX', 'PICUDISCHARGE', 'PICUDISCHARGE_DISCHRONICDX', 'PICUDISCHARGE_DISSECONDDX', 'SURGERY']\n"
      ]
     }
    ],
@@ -177,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-17T18:53:41.575229Z",
-     "start_time": "2019-12-17T18:53:40.136Z"
+     "end_time": "2019-12-19T15:50:30.690489Z",
+     "start_time": "2019-12-19T15:50:28.568489Z"
     }
    },
    "outputs": [],
@@ -191,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T18:49:55.104229Z",
-     "start_time": "2019-12-18T18:49:52.191229Z"
+     "end_time": "2019-12-19T15:51:07.819489Z",
+     "start_time": "2019-12-19T15:51:06.145489Z"
     }
    },
    "outputs": [],
@@ -255,11 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T15:23:26.361229Z",
-     "start_time": "2019-12-18T15:23:24.157229Z"
+     "end_time": "2019-12-19T15:55:54.236489Z",
+     "start_time": "2019-12-19T15:55:52.624489Z"
     }
    },
    "outputs": [
@@ -267,32 +261,178 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 2019-12-18 10:23:25,580 - INFO - SELECT HOSPITALADMIT.Sex, CAREPROCESSES.MechVent, DEATH.DeathMode FROM HOSPITALADMIT JOIN CAREPROCESSES ON HOSPITALADMIT.PudID = CAREPROCESSES.PudID JOIN DEATH ON CAREPROCESSES.PudID = DEATH.PudID \n"
+      " 2019-12-19 10:55:54,171 - INFO - SELECT HOSPITALADMIT.PudID AS PatientID, HOSPITALADMIT.Sex AS Sex, CAREPROCESSES.MechVent AS MechVent, DEATH.DeathMode AS DeathMode FROM HOSPITALADMIT JOIN CAREPROCESSES ON HOSPITALADMIT.PudID = CAREPROCESSES.PudID JOIN DEATH ON CAREPROCESSES.PudID = DEATH.PudID \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7779998779296875\n"
+      "0.04999995231628418\n"
      ]
     }
    ],
    "source": [
     "path = ['HOSPITALADMIT', 'CAREPROCESSES', 'DEATH']\n",
     "start = time.time()\n",
-    "df = z.get_df_from_path(path, table_columns_of_interest=['HOSPITALADMIT.Sex', 'CAREPROCESSES.MechVent', 'DEATH.DeathMode'])\n",
+    "df = z.get_df_from_path(path, table_columns_of_interest=[('HOSPITALADMIT', 'PudID'), ('HOSPITALADMIT', 'Sex'), ('CAREPROCESSES', 'MechVent'), ('DEATH', 'DeathMode')])\n",
     "end = time.time()\n",
     "print(end-start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T15:30:48.036229Z",
-     "start_time": "2019-12-18T15:30:46.643229Z"
+     "end_time": "2019-12-19T15:55:56.017489Z",
+     "start_time": "2019-12-19T15:55:54.243489Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientID</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>MechVent</th>\n",
+       "      <th>DeathMode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>125</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Failed resuscitation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>154</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Failed resuscitation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>155</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>270</td>\n",
+       "      <td>9925</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Brain death</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>271</td>\n",
+       "      <td>9932</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>272</td>\n",
+       "      <td>9964</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Brain death</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>273</td>\n",
+       "      <td>9990</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>274</td>\n",
+       "      <td>10039</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Withdrawal of care</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>275 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PatientID     Sex MechVent             DeathMode\n",
+       "0           27  Female      Yes    Withdrawal of care\n",
+       "1           78    Male      Yes    Withdrawal of care\n",
+       "2          125  Female      Yes  Failed resuscitation\n",
+       "3          154  Female      Yes  Failed resuscitation\n",
+       "4          155    Male      Yes    Withdrawal of care\n",
+       "..         ...     ...      ...                   ...\n",
+       "270       9925  Female      Yes           Brain death\n",
+       "271       9932    Male       No    Withdrawal of care\n",
+       "272       9964    Male      Yes           Brain death\n",
+       "273       9990    Male       No    Withdrawal of care\n",
+       "274      10039    Male      Yes    Withdrawal of care\n",
+       "\n",
+       "[275 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T15:52:17.856489Z",
+     "start_time": "2019-12-19T15:52:15.943489Z"
     }
    },
    "outputs": [
@@ -306,7 +446,7 @@
        "Name: DeathMode, dtype: int64"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,6 +945,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T15:50:41.063489Z",
+     "start_time": "2019-12-19T15:50:39.096489Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "w = db_structure_v2.DBCustomizer(directory_path='datasets\\\\TOPICC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T15:50:43.711489Z",
+     "start_time": "2019-12-19T15:50:41.073489Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "w.rename_column('CARDIACPROCEDURES', 'PudID', 'PatientID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T15:50:46.330489Z",
+     "start_time": "2019-12-19T15:50:43.716489Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "w.dump_customization()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T15:42:57.101489Z",
+     "start_time": "2019-12-19T15:42:55.837489Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [(1, 2), (3, 4)]\n",
+    "for i, j in x:\n",
+    "    print(i)\n",
+    "    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -816,18 +1026,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
