--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -496,11 +496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T16:05:12.451617Z",
-     "start_time": "2020-02-06T16:05:10.936617Z"
+     "end_time": "2020-02-10T15:37:05.932617Z",
+     "start_time": "2020-02-10T15:37:03.656617Z"
     }
    },
    "outputs": [],
@@ -510,167 +510,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T16:06:13.872617Z",
-     "start_time": "2020-02-06T16:05:22.261617Z"
+     "end_time": "2020-02-10T15:37:08.682617Z",
+     "start_time": "2020-02-10T15:37:05.936617Z"
     }
    },
    "outputs": [],
    "source": [
-    "paths = z.find_paths_between_tables('SCAObservation', 'SCAPatientDim', recursion_depth=5)"
+    "paths = [['BF_FoleyTimes', 'SCAVisit']]\n",
+    "table_columns_of_interest = [('BF_FoleyTimes', 'FoleyDays'), ('SCAVisit', 'IsCHF')]\n",
+    "filters_with_name_keys = {'SCAVisit_IsCHF': {'filter': ['0', '1'], 'type': 'bool'}}\n",
+    "groupby_columns = ['SCAVisit_IsCHF']\n",
+    "aggregate_column = 'BF_FoleyTimes_FoleyDays'\n",
+    "aggregate_fxn = 'Mean'\n",
+    "df = z.get_biggest_df_from_paths(paths, table_columns_of_interest, limit_rows=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T16:06:34.603617Z",
-     "start_time": "2020-02-06T16:06:32.862617Z"
+     "end_time": "2020-02-10T15:37:12.322617Z",
+     "start_time": "2020-02-10T15:37:10.000617Z"
     }
    },
    "outputs": [],
    "source": [
-    "sorted(paths, key=lambda x: len(x))[-1]"
+    "agg_df = z.aggregate_df(df, groupby_columns, filters_with_name_keys, aggregate_column, aggregate_fxn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T15:21:12.066617Z",
-     "start_time": "2020-02-06T15:21:04.712617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = z.get_df_from_path(['SCAObservation', 'SCAVisit', 'SCAPatientDim'], table_columns_of_interest=[('SCAVisit', 'AdmitShiftDimID'), ('SCAPatientDim', 'HasHxAsthma')], limit_rows=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-06T15:21:13.930617Z",
-     "start_time": "2020-02-06T15:21:12.070617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-06T19:34:29.253617Z",
-     "start_time": "2020-02-06T19:34:27.185617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from web import db\n",
-    "db.session.rollback()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T19:28:13.378617Z",
-     "start_time": "2020-02-07T19:28:11.788617Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('1', '2', '3')\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in itertools.product(*['1', '2', '3']):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T19:30:20.750617Z",
-     "start_time": "2020-02-07T19:30:19.163617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "filter_filters = [['1', '2', '3'], ['a', 'b']]\n",
-    "groupby_label_options = []\n",
-    "\n",
-    "for filter_combo in itertools.product(*filter_filters):\n",
-    "    label = ''\n",
-    "    for i in filter_combo:\n",
-    "        label += str(i) + '_'\n",
-    "    label = label[:-1]\n",
-    "    groupby_label_options.append(label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T19:30:23.923617Z",
-     "start_time": "2020-02-07T19:30:22.307617Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1_a', '1_b', '2_a', '2_b', '3_a', '3_b']"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "groupby_label_options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T20:31:05.747617Z",
-     "start_time": "2020-02-07T20:31:03.428617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "column_values = [True, False]\n",
-    "next((x for x in column_values if str(x).upper() in ['', 'asdf']), None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T20:36:17.478617Z",
-     "start_time": "2020-02-07T20:36:14.305617Z"
+     "end_time": "2020-02-10T15:37:16.183617Z",
+     "start_time": "2020-02-10T15:37:14.034617Z"
     }
    },
    "outputs": [
@@ -695,100 +573,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>VisitID</th>\n",
-       "      <th>ClientVisitGUID</th>\n",
-       "      <th>AdmitDtm</th>\n",
-       "      <th>AdmitDateDimID</th>\n",
-       "      <th>AdmitShiftDimID</th>\n",
-       "      <th>DischargeDtm</th>\n",
-       "      <th>DischargeDateDimID</th>\n",
-       "      <th>DischargeShiftDimID</th>\n",
-       "      <th>DischargeLocationDimID</th>\n",
-       "      <th>FirstLocationDimID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>OrganizationalUnitDimID</th>\n",
-       "      <th>vVisGUID</th>\n",
-       "      <th>DischargeToLocationDimID</th>\n",
-       "      <th>LOSAltDays</th>\n",
-       "      <th>GroupPracticeDimID</th>\n",
-       "      <th>EDDepartureDtm</th>\n",
-       "      <th>EDDepartureDateDimID</th>\n",
-       "      <th>PatientReadmittedWithin30Days</th>\n",
-       "      <th>DaysToReadmission</th>\n",
-       "      <th>ReadmitVisitID</th>\n",
+       "      <th>BF_FoleyTimes_FoleyDays</th>\n",
+       "      <th>groupby_labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 95 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [VisitID, ClientVisitGUID, AdmitDtm, AdmitDateDimID, AdmitShiftDimID, DischargeDtm, DischargeDateDimID, DischargeShiftDimID, DischargeLocationDimID, FirstLocationDimID, HasAllergicReactionToMed, HasCriticalSodium, HasCriticalPotassium, HasDVT, HasHighBili, HasHighBiliInit, HasHighCreat, HasHighCreatInit, HasHighGlucose, HasNosocomialInf, HasTransferToCriticalCare, HasVAPneumonia, IsAMIPatient, IsCHF, IsCOPD, IsSmoker, IsVIP, LOSHours, LOSDays, SrcUpdtDtm, IntUpdtDtm, ServiceDimID, ProviderDimID, CareLevelDimID, AgeDimID, PatientDimID, FacilityDimID, AdmitReasonDimID, AmbulStatusDimID, VisitTypeDimID, VisitStatusDimID, DischargeDispositionDimID, DemographicDimID, ArrivalDtm, ArrivalDateDimID, EDLocationDimID, TeachingStatus, LinkedVisitID, IsInhousePatient, IsActive, SrcInstDtm, IsPNPatient, DidSmokeCounseling, ChartGUID, HasCriticalHighGlucose, HasVTE, HasUTI, IsAsthmaPatient, HasPressureUlcer, HasCentralLineAssocInf, HasHighBNP, HasHighTroponin, IsSurgeryPatient, InsuranceTypeDimID, PrimaryProviderDimID, EncounterNumber, Is30DayReadmit, MRN, PostalCodeDimID, SourceName, AdmitDate, DischargeDate, InjuryDtm, InjuryDateDimID, InjuryBodyPart, InjuryType, InjuryComment, MotherVisitID, ExpectedLOS, EthnicityDimID, ModeOfArrivalDimID, AdmitSourceDimID, ReferringFacilityDimID, AdmitTypeDimID, WasEDPatient, OrganizationalUnitDimID, vVisGUID, DischargeToLocationDimID, LOSAltDays, GroupPracticeDimID, EDDepartureDtm, EDDepartureDateDimID, PatientReadmittedWithin30Days, DaysToReadmission, ReadmitVisitID]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 95 columns]"
+       "   BF_FoleyTimes_FoleyDays groupby_labels\n",
+       "0                     3.22              0\n",
+       "1                     6.49              1"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[~df['vVisGUID'].isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T20:36:43.498617Z",
-     "start_time": "2020-02-07T20:36:40.627617Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of db_structure failed: Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 368, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\imp.py\", line 315, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\importlib\\__init__.py\", line 166, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"C:\\Users\\SShah50\\Documents\\Programming\\cohort-visualization\\db_structure.py\", line 718\n",
-      "    if str(filter['filter'][0]).upper()) in ['1', 'TRUE', 'T', 'Y', 'YES']:\n",
-      "                                       ^\n",
-      "SyntaxError: invalid syntax\n",
-      "]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'None'"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(None)"
+    "agg_df"
    ]
   },
   {
